# stripe-to-xero

./: .gitignore  README.md  pyproject.toml
src/: main.py  xero.py
